--- a/_quarto.yml
+++ b/_quarto.yml
@@ -1,8 +1,9 @@
 project:
   type: website
+  output-dir: docs
 
 website:
-  title: "unreservs.github.io"
+  title: "unreservs"
   navbar:
     left:
       - href: index.qmd
